REGRESSION(r111387): CSSOM representation of 'background-image' values should be CSSPrimitiveValue. <http://webkit.org/b/85500>

Reviewed by Antti Koivisto.

Source/WebCore:

Use the cloneForCSSOM() mechanism in CSSValue to expose CSSImageValue to bindings as a URI
primitive value. This matches the specced behavior of computed image values, and restores our
previous behavior without having CSSImageValue subclass CSSPrimitiveValue.

Also added a failsafe return after the isCSSOMSafe() assertion in the JSC bindings, since it's
better to expose an incorrect return value than an insecurely shared one, should we have or add
bugs in this code.

* bindings/js/JSCSSValueCustom.cpp:
(WebCore::toJS):
* css/CSSImageValue.cpp:
(WebCore::CSSImageValue::cloneForCSSOM):
* css/CSSImageValue.h:
* css/CSSValue.cpp:
(WebCore::CSSValue::cloneForCSSOM):

LayoutTests:

Update fast/css/image-value-type.html to reflect that CSSImageValue are now exposed
as primitive values in the CSSOM.

* fast/css/image-value-type-expected.txt:
* fast/css/image-value-type.html:

Canonical link: https://commits.webkit.org/103065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115991 268f45cc-cd09-0410-ab3c-d52691b4dbfc