Source/WebCore/css/CSSImageValue.cpp
@@ -107,4 +107,12 @@ String CSSImageValue::customCssText() const
     return "url(" + quoteCSSURLIfNeeded(m_url) + ")";
 }
 
+PassRefPtr<CSSValue> CSSImageValue::cloneForCSSOM() const
+{
+    // NOTE: We expose CSSImageValues as URI primitive values in CSSOM to maintain old behavior.
+    RefPtr<CSSPrimitiveValue> uriValue = CSSPrimitiveValue::create(m_url, CSSPrimitiveValue::CSS_URI);
+    uriValue->setCSSOMSafe();
+    return uriValue.release();
+}
+
 } // namespace WebCore
